src/components/Scaffold/AppBar/AppBar/appBar.module.css
/* configurable tokens
*
* --md-app-bar-background
* --md-app-bar-title-color
*
* configurable tokens end */

@layer adgytec.comps {
    .app-bar {
        --_md-app-bar-background: var(
            --md-app-bar-background,
            var(--md-sys-color-surface)
        );
        --_md-app-bar-title-color: var(
            --md-app-bar-title-color,
            var(--md-sys-color-on-surface)
        );
        --_md-app-bar-headline-block-size: var(--md-sys-layout-space-28);

        display: grid;
        gap: var(--md-sys-layout-space-12);

        padding-inline: var(--md-sys-layout-space-4);
        padding-block: var(--md-sys-layout-space-12);

        background-color: var(--_md-app-bar-background);

        &[data-size="medium"] {
            --_md-app-bar-headline-block-size: var(--md-sys-layout-space-36);
        }

        &[data-size="large"] {
            --_md-app-bar-headline-block-size: calc(44 * var(--dp, 1px));
        }
    }

    .primary {
        display: flex;
        gap: var(--md-sys-layout-space-8);
        align-items: center;
    }

    .leading-action {
        --md-button-color: var(--_md-app-bar-title-color);
    }

    .trailing-actions {
        margin-inline-start: auto;

        display: flex;
        gap: var(--md-sys-layout-space-16);
        align-items: center;
    }

    .headline {
        flex: 1;
    }

    .secondary {
        padding-inline: var(--md-sys-layout-space-12);
    }
}

